syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";
import "cardchain/cardchain/voting.proto";

message Match {

  uint64 timestamp = 1;
  string reporter = 2;
  MatchPlayer playerA = 3;
  MatchPlayer playerB = 4;
  Outcome outcome = 7;
  bool coinsDistributed = 10;
  bool serverConfirmed = 8;
}

message MatchPlayer {
  string addr = 1;
  repeated uint64 playedCards = 2;
  bool confirmed = 3;
  Outcome outcome = 4;
  repeated uint64 deck = 5;
  repeated SingleVote votedCards = 6;
}

enum Outcome {
  AWon    = 0;
  BWon    = 1;
  Draw    = 2;
  Aborted = 3;
}